--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.17.1",
     "jimp": "^0.16.1",
     "mongo": "^0.1.0",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
     "mustache-express": "^1.3.0",
