--- a/variables.env
+++ b/variables.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=8888
-DATABASE=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
+DATABASE=mongodb://localhost:27017/test
 SECRET=123
