Email de redefinição enviado para Mailtrap

--- a/variables.env
+++ b/variables.env
@@ -2,3 +2,9 @@ NODE_ENV=development
 PORT=8888
 DATABASE=mongodb://localhost:27017/test
 SECRET=123
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=e4f0b60bf6604f
+SMTP_PASS=7df6a79a6df1c6
+SMTP_NAME=GODOFREDO
+SMTP_EMAIL=naoresponda@eserio.com
